update index html

--- a/index.html
+++ b/index.html
@@ -23,42 +23,42 @@
         </svg>
         Probably Weather
       </div>
-      <div id="location" class="location">Loading...</div>
+      <div id="location" class="location">Strand, WC</div>
       <div class="tagline">No more Ja-No-Maybe weather. Just Probably.</div>
     </header>
 
     <main class="main">
       <div id="confidence" class="confidence">PROBABLY • HIGH CONFIDENCE</div>
-      <h1 id="headline" class="headline">Loading...</h1>
-      <div id="temp" class="temp">--°</div>
-      <div id="description" class="description">Fetching your probable forecast...</div>
+      <h1 id="headline" class="headline">This is cold.</h1>
+      <div id="temp" class="temp">5–8°</div>
+      <div id="description" class="description">Time to build a snowman</div>
     </main>
 
     <aside class="sidebar">
       <div class="card">
-        <div class="label">Today's extreme:</div>
-        <div id="extremeValue" class="value">--°</div>
+        <div id="extremeLabel" class="label">Today's extreme: Cold</div>
+        <div id="extremeValue" class="value">5–8°</div>
       </div>
       <div class="card">
         <div class="label">Rain:</div>
-        <div id="rainValue" class="value">--</div>
+        <div id="rainValue" class="value">Probably snow today</div>
       </div>
       <div class="card">
         <div class="label">UV</div>
-        <div id="uvValue" class="value">--</div>
+        <div id="uvValue" class="value">Low (2)</div>
       </div>
       <div class="card">
         <div class="label">Confidence:</div>
-        <div id="confidenceValue" class="value">--</div>
+        <div id="confidenceValue" class="value">High<br>Based on 5 forecasts →</div>
       </div>
     </aside>
 
     <nav class="bottom-nav">
-      <button id="navHome" class="nav-item active">🏠 Home</button>
-      <button id="navHourly" class="nav-item">⏰ Hourly</button>
-      <button id="navWeek" class="nav-item">📅 Week</button>
-      <button id="navSearch" class="nav-item">🔍 Search</button>
-      <button id="navSettings" class="nav-item">⚙️ Settings</button>
+      <button id="navHome" class="nav-item active">Home</button>
+      <button id="navHourly" class="nav-item">Hourly</button>
+      <button id="navWeek" class="nav-item">Week</button>
+      <button id="navSearch" class="nav-item">Search</button>
+      <button id="navSettings" class="nav-item">Settings</button>
     </nav>
   </div>
 
