add hourly screen

--- a/index.html
+++ b/index.html
@@ -27,12 +27,17 @@
       <div class="tagline">No more Ja-No-Maybe weather. Just Probably.</div>
     </header>
 
-    <main class="main">
+    <main id="home-screen" class="main">
       <div id="confidence" class="confidence">PROBABLY • HIGH CONFIDENCE</div>
       <h1 id="headline" class="headline">This is cold.</h1>
       <div id="temp" class="temp">5–8°</div>
       <div id="description" class="description">Time to build a snowman</div>
     </main>
+
+    <section id="hourly-screen" class="hourly-screen hidden">
+      <h2 class="hourly-title">Hourly Forecast</h2>
+      <div id="hourlyTimeline" class="hourly-timeline"></div>
+    </section>
 
     <aside class="sidebar">
       <div class="card">
