--- a/index.html
+++ b/index.html
@@ -80,6 +80,21 @@
     </nav>
   </div>
 
+  <!-- Heat haze SVG filter -->
+  <svg width="0" height="0" style="position: absolute; pointer-events: none;">
+    <defs>
+      <filter id="heatHaze" x="-100%" y="-100%" width="300%" height="300%">
+        <feTurbulence type="fractalNoise" baseFrequency="0.02" numOctaves="3">
+          <animate attributeName="baseFrequency" values="0.02;0.03;0.02" dur="15s" repeatCount="indefinite"/>
+        </feTurbulence>
+        <feDisplacementMap in="SourceGraphic" scale="15" xChannelSelector="R" yChannelSelector="G"/>
+      </filter>
+    </defs>
+  </svg>
+
+  <!-- Heat overlay for stronger bottom-focused haze -->
+  <div id="heatOverlay"></div>
+
   <script src="assets/app.js"></script>
 </body>
 </html>
