weekly screen test

--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
       <div id="hourlyTimeline" class="hourly-timeline"></div>
     </section>
 
+    <section id="week-screen" class="week-screen hidden">
+      <h2 class="week-title">7-Day Forecast</h2>
+      <div id="dailyCards" class="daily-cards"></div>
+    </section>
+
     <section id="search-screen" class="search-screen hidden">
       <input id="searchInput" type="text" placeholder="Search for a place" />
       <div class="saved-places">
@@ -92,7 +97,6 @@
     </defs>
   </svg>
 
-  <!-- Heat overlay for stronger bottom-focused haze -->
   <div id="heatOverlay"></div>
 
   <script src="assets/app.js"></script>
