--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </div>
       <div id="location" class="location">Loading...</div>
       <div class="tagline">No more Ja-No-Maybe weather. Just Probably.</div>
+      <button id="saveCurrent" class="save-btn hidden">⭐ Save this place</button>
     </header>
 
     <main id="home-screen" class="main">
