--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Probably Weather</title>
   <link rel="stylesheet" href="assets/app.css"/>
+  <link rel="manifest" href="manifest.json"/>
 </head>
 <body>
   <div id="bg" aria-hidden="true">
@@ -13,6 +14,8 @@
   </div>
 
   <div id="particles" aria-hidden="true"></div>
+
+  <div id="loader" class="loader hidden">Fetching probable weather...</div>
 
   <div class="container">
     <header class="header">
@@ -58,6 +61,32 @@
       <button id="manageFavorites">Manage favorites</button>
     </section>
 
+    <section id="settings-screen" class="settings-screen hidden">
+      <h2 class="settings-title">Settings</h2>
+      <div class="settings-option">
+        <label for="units">Temperature Units:</label>
+        <select id="units">
+          <option value="C">Celsius (°C)</option>
+          <option value="F">Fahrenheit (°F)</option>
+        </select>
+      </div>
+      <div class="settings-option">
+        <label for="theme">Theme:</label>
+        <select id="theme">
+          <option value="auto">Auto (Weather-based)</option>
+          <option value="light">Light</option>
+          <option value="dark">Dark</option>
+        </select>
+      </div>
+      <div class="settings-option">
+        <label for="api">Forecast Source:</label>
+        <select id="api">
+          <option value="single">Single (Fast)</option>
+          <option value="multi">Multi (Probable)</option>
+        </select>
+      </div>
+    </section>
+
     <aside class="sidebar">
       <div class="card">
         <div id="extremeLabel" class="label">Today's extreme:</div>
@@ -85,6 +114,8 @@
       <button id="navSettings" class="nav-item">⚙️ Settings</button>
     </nav>
   </div>
+
+  <div id="toast" class="toast hidden"></div>
 
   <!-- Heat haze SVG filter -->
   <svg width="0" height="0" style="position: absolute; pointer-events: none;">
