--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <main id="home-screen" class="main">
       <div id="confidence" class="confidence">PROBABLY • HIGH CONFIDENCE</div>
-      <h1 id="headline" class="headline"><span id="headline-icon"></span> Loading...</h1>
+      <h1 id="headline" class="headline">Loading...</h1>
       <div id="temp" class="temp">--°</div>
       <div id="description" class="description">Fetching your probable forecast...</div>
     </main>
