more grok updates

--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
   </div>
 
   <div id="heatOverlay"></div>
-
-  <footer class="footer">Data from OpenWeatherMap & WeatherAPI.com</footer>
+  
+  <footer class="footer">Data from Open-Meteo, WeatherAPI.com & MET Norway</footer>
 
   <script src="assets/app.js"></script>
 </body>
