--- a/index.html
+++ b/index.html
@@ -29,10 +29,13 @@
       </div>
 
       <div class="tagline">No more Ja-No-Maybe weather. Just Probably.</div>
+
+      <button id="saveCurrent" class="save-btn">⭐ Save this place</button>
     </header>
 
     <main id="home-screen" class="main">
       <div id="confidence" class="confidence">PROBABLY • —</div>
+      <div id="sources" class="sources">Sources: —</div>
 
       <h1 id="headline" class="headline">Loading...</h1>
       <div id="temp" class="temp">--°</div>
@@ -67,46 +70,55 @@
 
     <section id="settings-screen" class="settings-screen hidden">
       <h2 class="settings-title">Settings</h2>
-      <div class="settings-option">
-        <label for="unitsTemp">Temperature Units:</label>
-        <select id="unitsTemp">
-          <option value="C">Celsius (°C)</option>
-          <option value="F">Fahrenheit (°F)</option>
-        </select>
+      <div class="settings-section">
+        <h3>Units</h3>
+        <div class="settings-option">
+          <label for="unitsTemp">Temperature</label>
+          <select id="unitsTemp">
+            <option value="C">Celsius</option>
+            <option value="F">Fahrenheit</option>
+          </select>
+        </div>
+        <div class="settings-option">
+          <label for="unitsWind">Wind speed</label>
+          <select id="unitsWind">
+            <option value="kmh">km/h</option>
+            <option value="ms">m/s</option>
+            <option value="mph">mph</option>
+          </select>
+        </div>
       </div>
-      <div class="settings-option">
-        <label for="unitsWind">Wind Speed Units:</label>
-        <select id="unitsWind">
-          <option value="kmh">km/h</option>
-          <option value="ms">m/s</option>
-          <option value="mph">mph</option>
-        </select>
+      <div class="settings-section">
+        <h3>Forecast display</h3>
+        <div class="settings-option toggle">
+          <label for="probRange">Show probability range</label>
+          <input type="checkbox" id="probRange">
+        </div>
+        <div class="settings-option">
+          <label for="timeFormat">Time format</label>
+          <select id="timeFormat">
+            <option value="24">24-hour</option>
+            <option value="12">12-hour</option>
+          </select>
+        </div>
       </div>
-      <div class="settings-option">
-        <label for="probRange">Show Probability Range:</label>
-        <input type="checkbox" id="probRange">
+      <div class="settings-section">
+        <h3>Language</h3>
+        <div class="settings-option toggle">
+          <label for="languagePlain">Plain</label>
+          <input type="radio" id="languagePlain" name="language" value="plain">
+        </div>
+        <div class="settings-option toggle">
+          <label for="languageHuman">Human</label>
+          <input type="radio" id="languageHuman" name="language" value="human" checked>
+        </div>
       </div>
-      <div class="settings-option">
-        <label for="timeFormat">Time Format:</label>
-        <select id="timeFormat">
-          <option value="24">24-hour</option>
-          <option value="12">12-hour</option>
-        </select>
+      <div class="settings-section">
+        <h3>Data sources</h3>
+        <p>Open-Meteo, WeatherAPI.com, MET Norway. Combined into a median forecast.</p>
       </div>
-      <div class="settings-option">
-        <label for="languagePlain">Language Plain:</label>
-        <input type="radio" id="languagePlain" name="language" value="plain">
-      </div>
-      <div class="settings-option">
-        <label for="languageHuman">Language Human:</label>
-        <input type="radio" id="languageHuman" name="language" value="human">
-      </div>
-      <div class="settings-option">
-        <label>Data Sources:</label>
-        <p>Open-Meteo, WeatherAPI.com & MET Norway</p>
-      </div>
-      <div class="settings-option">
-        <label>About:</label>
+      <div class="settings-section">
+        <h3>About</h3>
         <p>Version 1.0</p>
       </div>
     </section>
