--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <div class="settings-option">
           <label for="unitsTemp">Temperature</label>
           <select id="unitsTemp">
-            <option value="C">Celsius</option>
-            <option value="F">Fahrenheit</option>
+            <option value="C">Celsius (°C)</option>
+            <option value="F">Fahrenheit (°F)</option>
           </select>
         </div>
         <div class="settings-option">
@@ -90,7 +90,7 @@
       </div>
       <div class="settings-section">
         <h3>Forecast display</h3>
-        <div class="settings-option toggle">
+        <div class="settings-option">
           <label for="probRange">Show probability range</label>
           <input type="checkbox" id="probRange">
         </div>
@@ -104,18 +104,18 @@
       </div>
       <div class="settings-section">
         <h3>Language</h3>
-        <div class="settings-option toggle">
+        <div class="settings-option">
           <label for="languagePlain">Plain</label>
           <input type="radio" id="languagePlain" name="language" value="plain">
         </div>
-        <div class="settings-option toggle">
+        <div class="settings-option">
           <label for="languageHuman">Human</label>
           <input type="radio" id="languageHuman" name="language" value="human" checked>
         </div>
       </div>
       <div class="settings-section">
         <h3>Data sources</h3>
-        <p>Open-Meteo, WeatherAPI.com, MET Norway. Combined into a median forecast.</p>
+        <p>Open-Meteo, WeatherAPI.com & MET Norway. Combined into a median forecast.</p>
       </div>
       <div class="settings-section">
         <h3>About</h3>
