trying to restore

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <div class="settings-option">
           <label for="unitsTemp">Temperature</label>
           <select id="unitsTemp">
-            <option value="C">Celsius (°C)</option>
-            <option value="F">Fahrenheit (°F)</option>
+            <option value="C">Celsius</option>
+            <option value="F">Fahrenheit</option>
           </select>
         </div>
         <div class="settings-option">
