--- a/index.html
+++ b/index.html
@@ -1,122 +1,122 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Probably Weather</title>
-  <link rel="stylesheet" href="assets/app.css"/>
-  <link rel="manifest" href="manifest.json"/>
+  <link rel="stylesheet" href="assets/app.css" />
 </head>
+
 <body>
-  <div id="bg" aria-hidden="true">
-    <img id="bgImg" alt="" loading="lazy"/>
-    <div id="scrim"></div>
-  </div>
-
-  <div id="particles" aria-hidden="true"></div>
-
-  <div id="toast" class="toast"></div>
-  <div id="loader" class="loader hidden">Fetching probable weather...</div>
+  <!-- subtle overlays (CSS handles them) -->
+  <div class="overlay overlay--heat" aria-hidden="true"></div>
+  <div class="overlay overlay--grain" aria-hidden="true"></div>
 
   <div class="container">
     <header class="header">
       <div class="brand">
-        <div id="logoCircle" aria-hidden="true"></div>
-        <div class="brand-text">
+        <div class="logo" aria-hidden="true">PW</div>
+        <div>
           <div class="brand-title">Probably Weather</div>
-          <div id="location" class="brand-location">—</div>
+          <div class="brand-sub" id="subhead">The odds, in one place.</div>
         </div>
       </div>
 
-      <div class="tagline">No more Ja-No-Maybe weather. Just Probably.</div>
-
-      <button id="saveCurrent" class="save-btn">⭐ Save this place</button>
+      <div class="header-right">
+        <div class="mini" id="updatedAt">—</div>
+      </div>
     </header>
 
-    <main id="home-screen" class="main">
-      <div id="confidence" class="confidence">PROBABLY • DECENT AGREEMENT</div>
-      <div id="sources" class="sources">Sources: —</div>
+    <main class="main" id="main">
+      <!-- Home “hero” -->
+      <section class="hero">
+        <div class="hero-top">
+          <div class="city" id="cityName">—</div>
+          <div class="country" id="countryName">—</div>
+        </div>
 
-      <h1 id="headline" class="headline">Loading...</h1>
-      <div id="temp" class="temp">--°</div>
-      <div id="description" class="description">—</div>
+        <div class="hero-mid">
+          <div class="bigtemp" id="bigTemp">—</div>
+          <div class="condition" id="conditionText">—</div>
+        </div>
+
+        <div class="hero-bottom">
+          <div class="pill" id="confidencePill">—</div>
+          <div class="note" id="confidenceNote">—</div>
+        </div>
+      </section>
+
+      <!-- Screens (hidden until activated) -->
+      <section class="screen" id="screen-hourly" hidden>
+        <div class="screen-title">Hourly</div>
+        <div class="screen-body" id="hourlyList"></div>
+      </section>
+
+      <section class="screen" id="screen-week" hidden>
+        <div class="screen-title">Week</div>
+        <div class="screen-body" id="weekList"></div>
+      </section>
+
+      <section class="screen" id="screen-search" hidden>
+        <div class="screen-title">Search</div>
+        <div class="screen-body">
+          <input id="searchInput" class="search" type="text" placeholder="Search a city…" />
+          <button id="searchBtn" class="btn">Search</button>
+          <div class="search-hint" id="searchHint"></div>
+        </div>
+      </section>
+
+      <section class="screen" id="screen-settings" hidden>
+        <div class="screen-title">Settings</div>
+        <div class="screen-body">
+          <div class="setting-row">
+            <div>
+              <div class="setting-title">Units</div>
+              <div class="setting-sub">Currently fixed to °C and km/h.</div>
+            </div>
+            <div class="mini">v1</div>
+          </div>
+
+          <div class="setting-row">
+            <div>
+              <div class="setting-title">Sources</div>
+              <div class="setting-sub" id="sourcesList">—</div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <section id="hourly-screen" class="hourly-screen hidden">
-      <h2 class="screen-title">Hourly Forecast</h2>
-      <div id="hourly-timeline" class="hourly-timeline"></div>
-    </section>
-
-    <section id="week-screen" class="week-screen hidden">
-      <h2 class="screen-title">7-Day Forecast</h2>
-      <div id="daily-cards" class="daily-cards"></div>
-    </section>
-
-    <section id="search-screen" class="search-screen hidden">
-      <input id="searchInput" type="text" placeholder="Search for a place" />
-      <div class="saved-places">
-        <h3>Saved places</h3>
-        <ul id="favoritesList"></ul>
-      </div>
-      <div class="recent-places">
-        <h3>Recent</h3>
-        <ul id="recentList"></ul>
-      </div>
-      <button id="manageFavorites">Manage favorites</button>
-    </section>
-
-    <section id="settings-screen" class="settings-screen hidden">
-      <h2 class="settings-title">Settings</h2>
-      <div class="settings-option">
-        <label for="units">Temperature Units:</label>
-        <select id="units">
-          <option value="C">Celsius (°C)</option>
-          <option value="F">Fahrenheit (°F)</option>
-        </select>
-      </div>
-      <div class="settings-option">
-        <label for="theme">Theme:</label>
-        <select id="theme">
-          <option value="auto">Auto (Weather-based)</option>
-          <option value="light">Light</option>
-          <option value="dark">Dark</option>
-        </select>
-      </div>
-    </section>
-
-    <aside class="sidebar">
+    <aside class="sidebar" id="sidebar">
       <div class="card">
-        <div id="extremeLabel" class="label">Today's extreme:</div>
-        <div id="extremeValue" class="value">--</div>
+        <div class="card-title">Details</div>
+        <div class="kv">
+          <div class="k">Feels like</div><div class="v" id="feelsLike">—</div>
+          <div class="k">Wind</div><div class="v" id="windKph">—</div>
+          <div class="k">Humidity</div><div class="v" id="humidity">—</div>
+          <div class="k">Rain chance</div><div class="v" id="rainChance">—</div>
+        </div>
       </div>
+
       <div class="card">
-        <div class="label">Rain:</div>
-        <div id="rainValue" class="value">--</div>
-      </div>
-      <div class="card">
-        <div class="label">UV</div>
-        <div id="uvValue" class="value">--</div>
-      </div>
-      <div class="card">
-        <div class="label">Agreement:</div>
-        <div id="confidenceValue" class="value">--</div>
-        <div id="confidenceBar" class="confidence-bar"></div>
+        <div class="card-title">Tone</div>
+        <div class="tone-title" id="toneTitle">—</div>
+        <div class="tone-vibe" id="toneVibe">—</div>
+        <div class="tone-note" id="toneNote">—</div>
       </div>
     </aside>
 
-    <nav class="nav">
-      <button id="navHome">Home</button>
-      <button id="navHourly">Hourly</button>
-      <button id="navWeek">Week</button>
-      <button id="navSearch">Search</button>
-      <button id="navSettings">Settings</button>
+    <nav class="bottom-nav" aria-label="Primary">
+      <button class="nav-btn is-active" data-target="home">Home</button>
+      <button class="nav-btn" data-target="hourly">Hourly</button>
+      <button class="nav-btn" data-target="week">Week</button>
+      <button class="nav-btn" data-target="search">Search</button>
+      <button class="nav-btn" data-target="settings">Settings</button>
     </nav>
   </div>
 
-  <div id="heatOverlay"></div>
-  
-  <footer class="footer">Data from Open-Meteo, WeatherAPI.com & MET Norway</footer>
-
+  <!-- IMPORTANT: config loads BEFORE app.js -->
+  <script src="assets/config.js"></script>
   <script src="assets/app.js"></script>
 </body>
 </html>
