grok cursor update 4

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="logo" aria-hidden="true">PW</div>
         <div>
           <div class="brand-title">Probably Weather</div>
-          <div class="brand-sub" id="subhead">The odds, in one place.</div>
+          <div class="brand-sub" id="subhead">No more Ja-No-Maybe weather. Just Probably.</div>
         </div>
       </div>
 
@@ -45,6 +45,7 @@
         <div class="hero-mid">
           <div class="bigtemp" id="bigTemp">—</div>
           <div class="condition" id="conditionText">—</div>
+          <div class="witty" id="wittyLine">—</div>
         </div>
 
         <div class="hero-bottom">
