grok cursor update 7

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
         <div class="hero-bottom">
           <div class="pill" id="confidencePill">—</div>
+          <div class="confidence-bar" id="confidenceBar"></div> <!-- New bar -->
           <div class="note" id="confidenceNote">—</div>
         </div>
       </section>
@@ -123,7 +124,6 @@
     </nav>
   </div>
 
-  <!-- IMPORTANT: config loads BEFORE app.js -->
   <script src="assets/config.js"></script>
   <script src="assets/app.js"></script>
 </body>
