grok cursor update 8

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div class="hero-bottom">
           <div class="pill" id="confidencePill">—</div>
-          <div class="confidence-bar" id="confidenceBar"></div> <!-- New bar -->
+          <div id="confidenceBar" class="confidence-bar"></div> <!-- New -->
           <div class="note" id="confidenceNote">—</div>
         </div>
       </section>
