cursor trying to get homescreen look again from images

--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
   <div class="container">
     <header class="header">
       <div class="brand">
-        <div class="logo" aria-hidden="true">PW</div>
+        <div class="logo" aria-hidden="true" style="display: none;">PW</div>
         <div>
           <div class="brand-title">Probably Weather</div>
+          <div class="city" id="cityName">—</div>
           <div class="brand-sub" id="subhead">No more Ja-No-Maybe weather. Just Probably.</div>
         </div>
       </div>
@@ -37,11 +38,6 @@
     <main class="main" id="main">
       <!-- Home "hero" -->
       <section class="hero">
-        <div class="hero-top">
-          <div class="city" id="cityName">—</div>
-          <div class="country" id="countryName">—</div>
-        </div>
-
         <div class="hero-mid">
           <div class="confidence-badge" id="confidencePill">PROBABLY · MIXED CONFIDENCE</div>
           <div class="vibe-statement" id="conditionText">This is cloudy.</div>
@@ -98,22 +94,22 @@
 
     <aside class="sidebar" id="sidebar">
       <div class="card">
-        <div class="card-title">Today's extreme</div>
+        <div class="card-label">Today's extreme:</div>
         <div class="card-value" id="todayExtreme">—</div>
       </div>
 
       <div class="card">
-        <div class="card-title">Rain</div>
+        <div class="card-label">Rain:</div>
         <div class="card-value" id="rainChance">—</div>
       </div>
 
       <div class="card">
-        <div class="card-title">UV</div>
+        <div class="card-label">UV</div>
         <div class="card-value" id="uvIndex">—</div>
       </div>
 
       <div class="card">
-        <div class="card-title">Confidence</div>
+        <div class="card-label">Confidence:</div>
         <div class="card-value" id="confidenceLevel">—</div>
         <div class="card-note" id="confidenceExplanation">—</div>
       </div>
